--- a/src/components/MessageInfo/message_info.scss
+++ b/src/components/MessageInfo/message_info.scss
@@ -21,6 +21,8 @@
         margin-top: 30px;
         padding: 20px;
         background-color: var(--inputs-bg);
+        max-height: 70vh;
+        overflow-y: auto;
 
         & > p {
             color: $dark;
