fibers state creating 3

--- a/src/pages/Admin/FiberCreator/fiber-creator.scss
+++ b/src/pages/Admin/FiberCreator/fiber-creator.scss
@@ -59,6 +59,10 @@
                     grid-row-start: 1;
                     grid-row-end: 3;
                 }
+
+                @include respond-to(sm) {
+                    font-size: 14px;
+                }
             }
 
 
