--- a/src/pages/Admin/FiberCreator/fiber-creator.scss
+++ b/src/pages/Admin/FiberCreator/fiber-creator.scss
@@ -121,7 +121,7 @@
                             padding-bottom: 5px;
                             width: 100%;
                             margin-left: 0;
-
+                            font-weight: 500;
                         }
                     }
 
