fibers news and fiber edit and remove created

--- a/src/components/FiberItem/fiber-item.scss
+++ b/src/components/FiberItem/fiber-item.scss
@@ -143,6 +143,14 @@
                 & .link_compareList {
                     width: fit-content;
                 }
+
+
+                & .button_edit {
+                    margin-right: 20px;
+                    height: 40px;
+                    width: 45px;
+                }
+        
         
                 & > .button_delete__container {
                     width: 30px;
