--- a/src/pages/Admin/FiberCreator/fiber-creator.scss
+++ b/src/pages/Admin/FiberCreator/fiber-creator.scss
@@ -347,6 +347,15 @@
         }
 
 
+
+        & .change-images {
+            margin-right: auto;
+            margin-left: auto;
+            margin-top: 40px;
+            background-color: var(--main_vv);
+        }
+
+        
         & .post {
             margin-left: auto;
             margin-top: 30px;
