--- a/src/pages/NewsDetails/news-details.scss
+++ b/src/pages/NewsDetails/news-details.scss
@@ -70,7 +70,9 @@
         margin-top: 50px;
 
         & .button_edit {
-            margin-right: 30px;
+            margin-right: 20px;
+            height: 40px;
+            width: 45px;
         }
 
 
@@ -83,5 +85,4 @@
 
 
 }
-
 
