--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -19,6 +19,10 @@
     &:hover {
         box-shadow: 0px 0px 15px 0px var(--main);;
     }
+
+    &:disabled {
+        opacity: .4;
+    }
 }
 
 .button_news {
