change NewsAdder to using refs not state

--- a/src/components/Message/message.scss
+++ b/src/components/Message/message.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.message_info__container{
+.message__container{
     padding: 40px;
     padding-top: 30px;
     z-index: 6000;
