--- a/src/components/Auth/auth.scss
+++ b/src/components/Auth/auth.scss
@@ -62,6 +62,7 @@
             & .input-block {
                 width: 100%;
                 padding-top: 20px;
+                position: relative;
                 
                 @include respond-to(sm) {
                     margin-top: 10px;
@@ -84,7 +85,7 @@
                 & .input-element {
                     margin-top: 5px;
                     font-size: 20px;
-                    color: black;
+                    color: $black;
                     font-weight: 600;
                     padding: 5px 10px;
                     width: 100%;
@@ -108,6 +109,17 @@
 
                     & > input {
                         background-color: $color_input_error;
+                    }
+                }
+
+                & > .hider {
+                    height: 40px;
+                    width: 40px;
+                    position: absolute;
+                    right: 10px;
+                    bottom: 0px;
+                    & .eye {
+                        stroke: $black;
                     }
                 }
                 
