--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -15,6 +15,7 @@
     align-items: center;
     position: relative;
     border-radius: 5px; 
+    min-height: 40px;
 
     &:hover {
         box-shadow: 0px 0px 15px 0px var(--main);;
