--- a/src/pages/Admin/ColorCreator/color-creator.scss
+++ b/src/pages/Admin/ColorCreator/color-creator.scss
@@ -137,6 +137,11 @@
                     }
                 }
 
+
+                &.error {
+                    border: 1px solid red;
+                }
+
             }
 
         }
