--- a/src/pages/Admin/NewsCreator/news-creator.scss
+++ b/src/pages/Admin/NewsCreator/news-creator.scss
@@ -9,6 +9,7 @@
         background-color: var(--main);
         border-radius: 5px;
         padding: 40px;
+        position: relative;
 
         & .input-block, .input-block_header {
             display: grid;
@@ -71,6 +72,10 @@
                         content: 'RU';
                     }
                 }
+
+                &.error {
+                    border: 1px solid red;
+                }
             }
 
         }
@@ -94,103 +99,6 @@
 
             }
         }
-
-
-
-        /*& .images {
-
-            &__header {
-                text-align: center;
-                margin-left: 0;
-                margin-top: 50px;
-            }
-        
-
-        
-            & .image-block, .image-block_header {
-                display: grid;
-                grid-template-columns: 2fr 1fr 1fr 35px;
-                gap: 20px 40px;
-                position: relative;
-                margin-top: 15px;
-
-
-
-                span {
-                    text-align: center;
-                }
-                
-                @include respond-to(md) {
-                    grid-template-columns: 1fr 1fr 40px;
-                    gap: 20px 20px;
-                    border-bottom: 1px solid var(--main_vv);
-                    padding-bottom: 20px;
-
-                    &:last-child {
-                        border-bottom: none;
-                    }
-
-                    & .input__wrapper {
-
-                        &::before {
-                            position: relative;
-                            left: 0;
-                            top: 0;
-    
-    
-                        }
-                        &:nth-of-type(1)::before {
-                            content: 'URL';
-                        }
-                        &:nth-of-type(2)::before {
-                            content: 'EN';
-                        }
-                        &:nth-of-type(3)::before {
-                            content: 'RU';
-                        }
-                    }
-
-
-                    & .input__wrapper:nth-of-type(1) {
-                        grid-column: 1 / -1;
-                    }
-                }
-                
-
-
-                & .del {
-                    margin-top: 0;
-                    padding-left: 10px;
-                    padding-right: 10px;
-                    align-self: self-end;
-                    justify-self: end;
-                }
-            }
-
-            & .image-block_header {
-
-                &:only-of-type {
-                    display: none;
-                }
-
-                @include respond-to(md) {
-                    display: none;
-                }
-            }
-
-
-        }
-
-        & .add {
-            padding-left: 20px;
-            padding-right: 20px;
-            margin-left: auto;
-            @include respond-to(xs) {
-                width: 100%;
-                display: grid;
-                place-items: center;
-            }
-        }*/
 
         & .section-header {
             text-align: center;
@@ -310,5 +218,14 @@
             }
         }
 
+    }
+
+
+    & > .fetching {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
     }
 }
