create memoization fibersCompare

--- a/src/components/ImageModal/image-modal.scss
+++ b/src/components/ImageModal/image-modal.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.message_image__container {
+.image_modal__container {
     width: 90%;
     height: 85%;
     display: flex;
