--- a/src/pages/Admin/ProductCreator/product-creator.scss
+++ b/src/pages/Admin/ProductCreator/product-creator.scss
@@ -161,53 +161,8 @@
 
 
 
-        & .proscons {
-            & .block_procon {
-                display: grid;
-                grid-template-columns: 1fr 1fr 35px;
-                gap: 20px 40px;
-                position: relative;
-                margin-top: 15px;
+        & .mods {
 
-                span {
-                    text-align: center;
-                }
-                
-                @include respond-to(md) {
-                    grid-template-columns: 1fr 1fr 40px;
-                    gap: 20px 20px;
-                    border-bottom: 1px solid var(--main_vv);
-                    padding-bottom: 20px;
-
-                    &:last-child {
-                        border-bottom: none;
-                    }
-
-
-                }
-
-                @include respond-to(sm) {
-                    .input__wrapper:nth-of-type(1) {
-                        grid-column: 1 / -1;
-                    }
-
-                    .input__wrapper:nth-of-type(2) {
-                        grid-column: 1 / 3;
-                    }
-                }
-
-                
-
-
-                & .del {
-                    margin-top: 0;
-                    padding-left: 10px;
-                    padding-right: 10px;
-                    align-self: self-end;
-                    justify-self: end;
-                    background-color: var(--main_vv);
-                }
-            }
         }
 
 
@@ -275,7 +230,7 @@
             overflow-y: auto;
             
             
-            & .color__container {
+            & .fiber__container {
                 max-width: 80px;
                 position: relative;
                 display: flex;
