--- a/src/components/Featurer/featurer.scss
+++ b/src/components/Featurer/featurer.scss
@@ -5,13 +5,19 @@
 .features__container {
 
     & .features {
-        
+
         & .block_feature {
             display: grid;
             grid-template-columns: 1fr 1fr 35px;
             gap: 20px 40px;
             position: relative;
             margin-top: 15px;
+
+            & .input__wrapper {
+                &.error {
+                    border: 1px solid red;
+                }
+            }
 
             span {
                 text-align: center;
@@ -51,6 +57,21 @@
                 justify-self: end;
                 background-color: var(--main_vv);
             }
+        }
+
+    }
+    & .add {
+        padding-left: 20px;
+        padding-right: 20px;
+        margin-top: 20px;
+        margin-right: auto;
+        margin-left: auto;
+        background-color: var(--main_vv);
+
+        @include respond-to(xs) {
+            width: 100%;
+            display: grid;
+            place-items: center;
         }
     }
 
