--- a/src/pages/Admin/CatalogChanger/catalog-changer.scss
+++ b/src/pages/Admin/CatalogChanger/catalog-changer.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.page_fiber-add {
+.page_catalog-changer {
 
     & form {
         margin-top: 70px;
@@ -17,96 +17,6 @@
             padding: 20px;
             width: 100%; 
         }
-
-
-        & .input-block, .input-block_header {
-            display: grid;
-            grid-template-columns: 100px 1fr 1fr;
-            gap: 10px 20px;
-            margin-top: 30px;
-            align-content: stretch;
-
-
-
-            @include respond-to(md) {
-                grid-template-columns: 100px 1fr;
-                border-bottom: 1px solid var(--main_vv);
-                margin-top: 30px;
-                padding-bottom: 35px;
-
-                &:nth-of-type(5) {
-                    border-bottom: none;
-                }
-            }
-
-            @include respond-to(xs) {
-                grid-template-columns: 1fr;
-            }
-
-            & span, h3 {
-                text-align: center;
-                color: var(--text);
-            }
-
-
-            & label {
-                //min-width: 160px;
-                align-self: center;
-                white-space: nowrap;
-                font-size: 18px;
-
-                @include respond-to(md) {
-                    grid-row-start: 1;
-                    grid-row-end: 3;
-                }
-
-                @include respond-to(sm) {
-                    font-size: 14px;
-                }
-            }
-
-
-            .input__wrapper {
-                position: relative;
-
-                &:not(.no-info)::before {
-                    @include respond-to(md) {
-                        font-size: 14px;
-                        content: 'EN';
-                        position: relative; 
-                        left: 0%;
-                        top: 0px;
-                        transform: translate(0, -50%);
-                    }   
-                }
-
-                @include respond-to(md) {
-                    margin-bottom: 30px;
-                }
-
-                &:nth-of-type(2):not(.no-info)::before {
-                    @include respond-to(md) {
-                        content: 'RU';
-                    }
-                }
-
-                &.error {
-                    & label::before {
-                        content: '* ';
-                        color: red;
-                    }
-                }
-
-
-                &.error {
-                    border: 1px solid red;
-                }
-
-            }
-
-
-        }
-
 
 
         & .catalog {
@@ -170,16 +80,6 @@
 
 
 
-
-        & .input-block_header {
-            margin-top: 30px;
-            @include respond-to(md) {
-                display: none;
-            }
-        }
-
-
-
         & .full-width {
             grid-column: 1 / -1;
 
@@ -190,23 +90,8 @@
             }
         }
 
-        & .add {
-            padding-left: 20px;
-            padding-right: 20px;
-            margin-top: 20px;
-            margin-right: auto;
-            margin-left: auto;
-            background-color: var(--main_vv);
-
-            @include respond-to(xs) {
-                width: 100%;
-                display: grid;
-                place-items: center;
-            }
-        }
 
 
-        
         & .post {
             margin-left: auto;
             margin-top: 30px;
