--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -162,6 +162,7 @@ p {
     margin-left: auto;
     margin-right: auto;
     margin-top: 40px;
+    overflow-wrap: break-word;
 
     @include respond-to(sm) {
         width: 90%;
