--- a/src/components/Spliders/Preview/splider-preview.scss
+++ b/src/components/Spliders/Preview/splider-preview.scss
@@ -11,7 +11,7 @@
 
 
     
-    & #modalMain {
+    & #spliderMain {
         width: 100%;
         height: calc(100%);
         position: relative;
@@ -105,7 +105,7 @@
     }
 
 
-    & #modalThumbs {
+    & #spliderThumbs {
         width: 100%;
         height: 100%;
         //padding-top: 5%;
@@ -192,6 +192,7 @@
 
         .splide__track {
             cursor: grab;
+            width: 100%;
 
             & .splide__slide {
                 //opacity: 0.4;
