--- a/src/components/tiny/ColorPicker/color-picker.scss
+++ b/src/components/tiny/ColorPicker/color-picker.scss
@@ -57,6 +57,7 @@
             margin-right: 10px;
             border-radius: 5px;
             overflow: hidden;
+            position: relative;
 
             
             & > img {
@@ -64,13 +65,30 @@
                 width: 100%;
                 object-fit: cover;
             }
+
+            &:hover {
+                & > svg {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    margin-left: auto;
+                    height: 30px;
+                    width: 30px;
+                    flex-shrink: 0;
+                    /*& path {
+                        fill: var(--main_vv);
+                    }*/
+                }
+
+            }
         }
         
         
         & > span {
             transition: color $transition_fast;
             font-size: 16px;
-            margin-right: 15px;
+            margin-right: 25px;
 
             &:nth-of-type(2) {
                 font-weight: 400;
@@ -81,6 +99,16 @@
                 margin-right: 0;
             }
         }
+/*
+        & > svg {
+            margin-left: auto;
+            height: 30px;
+            width: 30px;
+            flex-shrink: 0;
+            & path {
+                fill: var(--main_vv);
+            }
+        }*/
 
 
         &:hover {
