--- a/src/pages/Product/product.scss
+++ b/src/pages/Product/product.scss
@@ -40,4 +40,31 @@
         }
     }
 
+
+    & .buttons {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-top: 50px;
+
+        & .link_compareList {
+            width: fit-content;
+        }
+
+
+        & .button_edit {
+            margin-right: 20px;
+            height: 40px;
+            width: 45px;
+        }
+
+
+        & > .button_delete__container {
+            width: 30px;
+            height: 30px;
+            margin-left: 30px;
+        }
+    }
+
 }
