--- a/src/partials/Nav/nav.scss
+++ b/src/partials/Nav/nav.scss
@@ -144,12 +144,12 @@ $gap_to_text: 5px;
                                 left: 50%;
                                 transform: translate(-50%, 0);
                                 width: 0;
-                                overflow: hidden;
+                                //overflow: hidden;
                                 display: flex;
                                 flex-direction: column;
                                 align-items: center;
                                 transition: width $transition_subMenu 0s;
-                                margin-top: 10px;
+                                padding-top: 10px;
                     
                     
                                 & > a {
@@ -158,6 +158,13 @@ $gap_to_text: 5px;
                                     white-space: nowrap;
                                     text-align: center;
                                     cursor: pointer;
+                                    position: relative;
+
+                                    .cart-informer__container {
+                                        position: absolute;
+                                        top: -7px;
+                                        left: 100%;
+                                    }
                     
                                     /*transform: scaleX(0);
                                     transition: transform $transition_subMenu 0s;*/
@@ -174,6 +181,10 @@ $gap_to_text: 5px;
 
 
                                 }
+
+
+
+
                             }
                         }
                     
@@ -248,14 +259,6 @@ $gap_to_text: 5px;
 
             }
 
-        }
-
-        .cart-informer__container {
-            position: absolute;
-            top: -8px;
-            right: -25px;
-            height: 20px;
-            width: 20px;
         }
 
 
@@ -392,7 +395,6 @@ $gap_to_text: 5px;
 
 
 }
-
 
 
 
@@ -649,17 +651,6 @@ $gap_to_text: 5px;
                     }
                     
 
-                }
-
-                & .cart-informer__container {
-                    position: absolute;
-                    top: 0;
-                    transform: translate(calc(100% + 5px), -50%);
-                    right: 0px;
-
-                    & span {
-                        font-size: 1em !important;
-                    }
                 }
 
 
