--- a/src/pages/Orders/orders.scss
+++ b/src/pages/Orders/orders.scss
@@ -38,10 +38,28 @@
 
 
         & .block_user {
-            margin-top: 60px;
+            margin-top: 140px;
             padding: 10px;
             width: 100%;
-            border: 1px solid red;
+           // border: 1px solid red;
+            border-radius: 15px;
+            position: relative;
+
+            &:first-of-type {
+                margin-top: 0px;
+            }
+            
+            &:not(:first-of-type)::before {
+                position: absolute;
+                top: -70px;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                content: "";
+                width: 40%;
+                height: 2px;
+                background-color: #fff;
+                border-radius: 2px;
+            }
 
             & .user__header {
                 text-align: center;
@@ -55,49 +73,98 @@
         }
 
 
-        & .block_order {
+        & .orders {
             //border: 1px solid red;
+            
+            & .order {
+                //border: 2px solid white;
+                background-color: var(--main);
+                border-radius: 10px;
+                padding: 10px;
+                margin-top: 30px;
+                position: relative;
 
-            & .order__date-status {
-                margin-top: 60px;
-                grid-column: 1/-1;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
 
-            & .order__cart {
-                display: grid;
-                margin-top: 10px;
-                grid-template-columns: 1fr 1fr 1fr 1fr auto;
-                
-                & .cell {
-                    border-right: 1px solid black;
-                    border-bottom: 1px solid black;
-                    padding: 5px 10px;
-    
-                    &.head {
-                        text-align: center;
-                        border-top: 1px solid black;
-                    }
-                    
-                    &.first {
-                        border-left: 1px solid #000;
-                    }
-    
-                    &.center {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    bottom: 100%;
+                    left: 50%;
+                    width: 3px;
+                    height: 30px;
+                    background-color: #fff;
+                }
+
+                &:nth-of-type(1) {
+                    margin-top: 20px;
+                    &::before {
+                        display: none;
                     }
                 }
+
+                & .order__date-status {
+                    grid-column: 1/-1;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+    
+                & .order__cart {
+                    display: grid;
+                    margin-top: 10px;
+                    grid-template-columns: 1fr 1fr 1fr 1fr auto;
+                    border: 2px solid black;
+                    border-radius: 10px;
+                    
+                    & .cell {
+                        border-left: 1px solid black;
+                        border-top: 1px solid black;
+                        padding: 5px 10px;
+        
+                        &.head {
+                            text-align: center;
+                            border-top: none;
+                        }
+                        
+                        &.first {
+                            border-left: none;
+                        }
+        
+                        &.center {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+                    }
+    
+                }
+
 
                 & .order__message-container {
                     margin-top: 10px;
                     grid-column: 1/-1;
-
+    
+                }
+    
+                & .files__header {
+                    text-align: center;
+                    margin-top: 15px;   
+                }
+    
+                & .files-container {
+                    width: 100%;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr;
+                    border: 1px solid var(--main_vv);
+                    border-radius: 10px;
+                    //padding: 20px;
+    
+                    & > .cell {
+                        padding: 10px;
+                    }
                 }
             }
+
             
 
 
@@ -119,9 +186,18 @@
                 border: none;
                 font-size: 18px;
                 padding: 5px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 30px;
+                height: 30px;
                 
                 &.selected {
                     color: red;
+                    //background-color: #fff;
+                    //border: 1px solid blue;
+                    //border-radius: 50%;
+                    font-weight: 700;
                 }
             }
         }
