all components to new images, FE+BE

--- a/src/components/FiberPreview/fiber-preview.scss
+++ b/src/components/FiberPreview/fiber-preview.scss
@@ -8,6 +8,7 @@
     & > .img__container {
         height: 200px;
         width: 100%;
+        position: relative;
 
         @include respond-to(sm) {
             height: 170px;
