--- a/src/components/Picker/picker.scss
+++ b/src/components/Picker/picker.scss
@@ -20,7 +20,7 @@
     
     
     & .item__container {
-        max-width: 80px;
+        width: 80px;
         position: relative;
         display: flex;
         flex-direction: column;
