--- a/src/components/Spliders/Preview/splider-preview.scss
+++ b/src/components/Spliders/Preview/splider-preview.scss
@@ -87,7 +87,7 @@
                 justify-content: center;
                 border-radius: 5px;
                 overflow: hidden;
-
+                min-height: 300px;
 
                 & img {
                     /*max-height: 100%;
