--- a/src/pages/Fiber/fiber.scss
+++ b/src/pages/Fiber/fiber.scss
@@ -69,14 +69,14 @@
                     & > .colors__container {
                         margin-top: 40px;
                         display: flex;
-                        align-items: center;
+                        align-items: stretch;
                         justify-content: center;
                         max-width: 80%;
                         margin-left: auto;
                         margin-right: auto;
                         flex-wrap: wrap;
                         gap: 25px;
-    
+
                         @include respond-to(md) {
                             max-width: 100%;
                         }
@@ -90,35 +90,47 @@
                         }
         
                         & > .color__container {
-                            width: 60px;
-                            height: 60px;
+                            width: 100px;
                             cursor: pointer;
                             box-sizing: border-box;
                             border-radius: 5px;
                             overflow: hidden;
+                            border: 1px solid var(--main);
+                            padding: 5px;
+
                             
                             @include respond-to(sm) {
-                                width: 50px;
-                                height: 50px;
+                                width: 80px;
                             }
                             
                             
                             @include respond-to(xs) {
-                                width: 40px;
-                                height: 40px;
+                                width: 70px;
                             }
     
-                            &:hover > img {
+                            &:hover > .img-container > img {
                                 transform: scale(1.2);
                             }
                             
-                            
-                            & > img {
-                                transition: transform $transition_fast;
+                            & .img-container {
                                 width: 100%;
-                                height: 100%;
-                                object-fit: cover;
+                                aspect-ratio: 1;
+                                //overflow: hidden;
+                                position: relative;
+                                
+                                & > img {
+                                    transition: transform $transition_fast;
+                                    width: 100%;
+                                    height: 100%;
+                                    object-fit: cover;
+                                }
                             }
+
+                            & .color__descr {
+                                display: block;
+                                margin-top: 5px;
+                            }
+                            
                         }
             
             
